--- a/src/components/Tables/TopTwitterHandlesTable.css
+++ b/src/components/Tables/TopTwitterHandlesTable.css
@@ -1,5 +1,7 @@
+.twitter {
+    padding: 10px;
+}
 #twitter-users {
-    margin: 10px 10px 50px 20px;
+    margin-bottom: 40px;
     text-align: left;
-    width: 95%;
 }
