--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,7 +2,7 @@
     text-align: center;
 }
 
-.filter-info {
+.grey-underline {
     border-bottom-width: 1px;
     border-bottom-color: #e1e1e1;
     border-bottom-style: solid;
